--- a/MihaelaLavacake.html
+++ b/MihaelaLavacake.html
@@ -43,7 +43,7 @@
                 </ul>
             </div>
             <a class="navbar-brand mx-auto col-3 col-md-1 me-md-3" href="./index.html">
-                <img src="resources/logo1.png" alt="logo" width="80px" />
+                <img src="resources/new-logo.png" alt="logo" width="80px" />
             </a>
         </nav>
         <div id="carouselExample" class="carousel slide mt-3" data-bs-ride="carousel">
