--- a/biryani.html
+++ b/biryani.html
@@ -19,41 +19,29 @@
 	<body id="body">
 		<div class="container-fluid has-bg-img">
 			<nav class="navbar navbar-expand-md navbar-light bg-transparent d-flex justify-content-between justify-content-md-end">
-				<button
-					class="navbar-toggler"
-					type="button"
-					data-bs-toggle="collapse"
-					data-bs-target="#navbarNav"
-					aria-controls="navbarNav"
-					aria-expanded="false"
-					aria-label="Toggle navigation"
-				>
-					<span class="navbar-toggler-icon"></span>
-				</button>
-
-				<div
-					class="collapse navbar-collapse justify-content-between"
-					id="navbarNav"
-				>
-					<ul class="navbar-nav">
-						<li class="nav-item">
-							<a class="nav-link" href="./index.html">Home</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="./MihaelaLavacake.html">Mihaela's</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="./steak-recipe.html">Denis'</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="./biryani.html">Aadil's</a>
-						</li>
-					</ul>
-				</div>
-				<a class="navbar-brand mx-auto col-3 col-md-1 me-md-3" href="./index.html">
-					<img src="resources/logo1.png" alt="logo" width="80px" />
-				</a>
-			</nav>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="./index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./MihaelaLavacake.html">Mihaela's</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./steak-recipe.html">Denis'</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./biryani.html">Aadil's</a>
+                </li>
+            </ul>
+        </div>
+        <a class="navbar-brand mx-auto col-3 col-md-1 me-md-3" href="./index.html">
+            <img src="resources/new-logo.png" alt="logo" width="80px" />
+        </a>
+     </nav>
 			<div
 				id="carouselExample"
 				class="carousel slide mt-3"
