We changed the logo to display none for mobile and tablet in the recipe pages and we changed the carousel pictures in the recipe pages

--- a/steak-recipe.html
+++ b/steak-recipe.html
@@ -30,7 +30,7 @@
                     </li>
                 </ul>
             </div>
-            <a class="navbar-brand mx-auto col-3 col-md-1 me-md-3" href="./index.html">
+            <a class="navbar-brand d-none d-md-block mx-auto col-3 col-md-1 me-md-3" href="./index.html">
                 <img src="resources/new-logo.png" alt="logo" width="80px" />
             </a>
         </nav>
