--- a/MihaelaLavacake.html
+++ b/MihaelaLavacake.html
@@ -42,26 +42,26 @@
                     </li>
                 </ul>
             </div>
-            <a class="navbar-brand mx-auto col-3 col-md-1 me-md-3" href="./index.html">
+            <a class="navbar-brand d-none d-md-block mx-auto col-3 col-md-1 me-md-3" href="./index.html">
                 <img src="resources/new-logo.png" alt="logo" width="80px" />
             </a>
         </nav>
         <div id="carouselExample" class="carousel slide mt-3" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="chicken-wings-barbecue-sweetly-sour-sauce-picnic-summer-menu-tasty-food-top-view-flat-lay.jpg"
-                        class="d-block w-100"
+                    <img src="resources/chocolate-fondue-with-icecream-ball.jpg"
+                        class="icecream-ball d-block w-100"
                         alt="Image 1"
                     />
                 </div>
                 <div class="carousel-item">
-                    <img src="./resources/spices-ingredients-table.jpg"
+                    <img src="./resources/chocolate-lava-cake-white-plate(1).jpg"
                         class="d-block w-100"
                         alt="Image 2"
                     />
                 </div>
                 <div class="carousel-item">
-                    <img src="./resources/top-view-powder-condiments.jpg"
+                    <img src="./resources/dessert-cake-with-chocolate-jam.jpg"
                         class="d-block w-100 img-fluid"
                         alt="Image 3"
                     />
