Added new pictures to the carousel

--- a/steak-recipe.html
+++ b/steak-recipe.html
@@ -37,13 +37,13 @@
         <div id="carouselExample" class="carousel slide mt-3" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="chicken-wings-barbecue-sweetly-sour-sauce-picnic-summer-menu-tasty-food-top-view-flat-lay.jpg" class="d-block w-100" alt="Image 1" />
+                    <img src="./resources/beef1.jpg" class="d-block w-100" alt="Image 1" />
                 </div>
                 <div class="carousel-item">
-                    <img src="./resources/spices-ingredients-table.jpg" class="d-block w-100" alt="Image 2" />
+                    <img src="./resources/beef2.jpg" class="d-block w-100" alt="Image 2" />
                 </div>
                 <div class="carousel-item">
-                    <img src="./resources/top-view-powder-condiments.jpg" class="d-block w-100 img-fluid" alt="Image 3" />
+                    <img src="./resources/beef3.jpg" class="d-block w-100 img-fluid" alt="Image 3" />
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
