--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 					</div>
 					<div class="carousel-item">
 						<img
-							src="./resources/spices-ingredients-table.jpg"
+							src="./resources/front-view-sweet-pancakes-tower-arrangement.jpg"git checkout 
 							class="d-block w-100"
 							alt="Image 2"
 						/>
